--- a/.github/workflows/site-build.yml
+++ b/.github/workflows/site-build.yml
@@ -24,7 +24,7 @@ jobs:
         id: DITA-build
         uses: jason-fox/dita-build-action@master
         with:
-          build: dita -i flowers.ditamap -o out -f markdown_github -v
+          build: dita -i Ddac.ditamap -o out -f markdown_github -v
       - name: Upload DITA
         id: upload
         uses: actions/upload-artifact@v2
