added copy file job

--- a/.github/workflows/site-build.yml
+++ b/.github/workflows/site-build.yml
@@ -25,12 +25,19 @@ jobs:
         uses: jason-fox/dita-build-action@master
         with:
           build: dita --project=profile.yaml -v
+      - name: move files
+       run: |
+         git mv theme.css out/theme.css
+         git mv coverpage.md out/coverpage.md
+         git config --global user.email "michael@ditatechwriter.com"
+         git config --global user.name "mditatechwriter"
+         git commit -m "moved resources"
       - name: Upload DITA
         id: upload
         uses: actions/upload-artifact@v2
         with:
           name: dita-artifact
-          path: 'out'
+          path: 'out'    
       - name: Deploy 🚀
         id: deploy
         uses: JamesIves/github-pages-deploy-action@4.0.0
@@ -40,6 +47,7 @@ jobs:
           FOLDER: out # The folder the action should deploy.
           TARGET-FOLDER: docs
 
+ 
  notify-slack:
    runs-on: ubuntu-latest
    name: Slack update
