--- a/.github/workflows/site-build.yml
+++ b/.github/workflows/site-build.yml
@@ -41,6 +41,7 @@ jobs:
           TARGET-FOLDER: docs
           CLEAN-EXCLUDE: theme.css
                          coverpage.md
+                         navbar.md
 
  
  notify-slack:
