added name dash

--- a/profile.yaml
+++ b/profile.yaml
@@ -7,5 +7,5 @@ deliverables:
     publication:
       transtype: 'markdown_github'
       params:
-            name: 'args.rellinks'
+          - name: 'args.rellinks'
             value: 'none'
