--- a/.github/workflows/site-build.yml
+++ b/.github/workflows/site-build.yml
@@ -39,3 +39,4 @@ jobs:
           BRANCH: site # The branch the action should deploy to.
           FOLDER: out # The folder the action should deploy.
           TARGET-FOLDER: docs
+          CLEAN: false
